Try Gradle JPMS support